[package]
name = "gemina"
version = "0.3.0"
edition = "2021"
authors = ["Andreas Suhre <andreas19@posteo.eu>"]
description = "Implementation of the Gemina specification."
readme = "README.md"
repository = "https://github.com/andreas19/gemina-rs/"
license = "BSD-3-Clause"
keywords = ["crypto", "encryption", "decryption"]
categories = ["cryptography"]

[dependencies]
anyhow = "1.0.86"
getrandom = { version = "0.2.15", features = ["std"] }
pbkdf2 = { version = "0.12.2", default-features = false }
hmac = "0.12.1"
sha2 = "0.10.8"
aes = "0.8.4"
cbc = { version = "0.1.2", features = ["std"] }
